
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:baselineAligned="false"
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_info"
        android:textStyle="bold" />




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_complete"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvNombre2"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_weight="0.21" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="262dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvFecha2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="262dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phoneAct"
            android:textStyle="bold" />

        <TextView
        android:id="@+id/tvTelefono2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textStyle="bold" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="262dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">
        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email2"
            android:textStyle="bold" />

    <TextView
        android:id="@+id/tvCorreo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="262dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">
        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desc"
            android:textStyle="bold" />

    <TextView
        android:id="@+id/tvDescrip2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textStyle="bold" />
    </LinearLayout>
    <Button
        android:id="@+id/tvEditar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/botonA2"/>


</LinearLayout>