<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="mx.com.cristian.myapplication.MainActivity">

       <android.support.design.widget.TextInputLayout
           android:layout_width="298dp"
           android:layout_height="wrap_content"
           tools:layout_editor_absoluteY="0dp"
           tools:layout_editor_absoluteX="8dp">

           <EditText
               android:id="@+id/tvNombre"
               android:layout_width="357dp"
               android:layout_height="48dp"
               android:hint="@string/nombre" />

       </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="298dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp">

        <EditText
            android:id="@+id/tvTelefono"
            android:layout_width="350dp"
            android:layout_height="48dp"
            android:hint="@string/telefono" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="305dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/fecha" />

        <DatePicker
            android:id="@+id/tvPicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:calendarViewShown="false"
            android:datePickerMode="spinner" />

        <Button
            android:id="@+id/btnGet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="OK" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="298dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp">

        <EditText
            android:id="@+id/tvCorreo"
            android:layout_width="359dp"
            android:layout_height="46dp"
            android:hint="@string/correo" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="298dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp">

        <EditText
            android:id="@+id/tvDescrip"
            android:layout_width="373dp"
            android:layout_height="52dp"
            android:hint="@string/desc" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/botonA1" />

</LinearLayout>
